k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spaces
  labels:
    app.kubernetes.io/name: spaces
