k8s/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spaces-svc
  namespace: spaces
spec:
  type: ClusterIP
  selector:
    app: spaces
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
