k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spaces
  namespace: spaces
  labels:
    app.kubernetes.io/name: spaces
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: spaces
